Refactor to TextMate-only architecture and fix highlighting
- Remove custom Language/PSI/Lexer/Parser infrastructure (11 files deleted);
  the TextMate bundle alone handles all tokenization
- Fix RosTextMateBundleProvider to resolve bundle path via PluginManagerCore
  instead of ClassLoader.getResource(), which fails for jar-scheme URLs
- Switch build to local CLion 2026.1 SDK with compileOnly for intellij.textmate.jar,
  since bundledPlugin() does not add module JARs to compile classpath automatically
- Convert grammar from plist XML to JSON (ros-interface.tmLanguage.json); IntelliJ
  TextMate plugin supports both via JsonOrXmlPlistReader, JSON is cleaner (no &lt; escapes)
- Use storage.type.rosmsg for custom types (e.g. geometry_msgs/Vector3) instead of
  support.type.rosmsg so CLion themes apply a color to package-qualified types
- Rename grammar file to remove space; fix package.json path accordingly
- Add proper upstream attribution (jtbandes/ros-tmlanguage, MIT License) in grammar file